<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTituloAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencias_titulo"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkNotificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencias_notificaciones"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTituloAjustes"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkTemaOscuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencias_tema_oscuro"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkNotificaciones"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
