<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTituloPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_titulo"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLabelNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_nombre"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTituloPerfil"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNombrePerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tvLabelNombre"
        app:layout_constraintTop_toTopOf="@id/tvLabelNombre"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_email"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelNombre"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEmailPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tvLabelEmail"
        app:layout_constraintTop_toTopOf="@id/tvLabelEmail"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_boton_editar"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmail"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>